--- a/DQN2.IPYNB
+++ b/DQN2.IPYNB
@@ -70,10 +70,10 @@
     "        return(action)\n",
     "\n",
     "    def replay(self, batch_size):\n",
-    "        minibatch = random.sample(self.memory, batch_size)\n",
+    "        mini_batch = random.sample(self.memory, batch_size)\n",
     "        statelist=[]\n",
     "        targetlist=[]\n",
-    "        for state, action, reward, done in mini_batch:\n",
+    "        for state, action, reward, next_state, done in mini_batch:\n",
     "            target = reward\n",
     "            if not done:\n",
     "                target = reward + np.amax(self.model.predict(next_state))\n",
